wlc haladás(nem csatlakoznak a gépek)

--- a/Konfigok.config
+++ b/Konfigok.config
@@ -191,20 +191,24 @@
                 ip add 192.168.1.65 255.255.255.248
                 ip nat inside
             int g0/0.40
-                encapsulation dot1q 40 native
+                encapsulation dot1q 40
                 ip add 192.168.1.49 255.255.255.240
                 ip nat inside
             int g0/0.3
                 encapsulation dot1q 3
                 ip add 192.168.1.73 255.255.255.248
                 ip nat inside
+            int g0/0.4
+                encapsulation dot1q 4 native
+                ip add 192.168.1.91 255.255.255.240
+                ip nat inside
             int g0/0.5
                 encapsulation dot1q 5
-                ip add 192.168.1.81 255.255.255.248
+                ip add 192.168.1.105 255.255.255.252
                 ip nat inside
             int g0/0.6
                 encapsulation dot1q 6
-                ip add 192.168.1.89 255.255.255.248
+                ip add 192.168.1.97 255.255.255.248
                 ip nat inside
                 exit
 
@@ -216,9 +220,12 @@
                 network 192.168.1.48 0.0.0.15 area 0
                 network 192.168.1.64 0.0.0.7 area 0
                 network 192.168.1.72 0.0.0.7 area 0
-                network 192.168.1.80 0.0.0.7 area 0
+                network 192.168.1.80 0.0.0.15 area 0
+                network 192.168.1.96 0.0.0.7 area 0
+                network 192.168.1.104 0.0.0.3 area 0
                 passive-interface g0/0
                 passive-interface g0/0.3
+                passive-interface g0/0.4
                 passive-interface g0/0.5
                 passive-interface g0/0.6
                 passive-interface g0/0.10
@@ -237,9 +244,10 @@
             access-list 1 permit 192.168.1.48 0.0.0.15
             access-list 1 permit 192.168.1.64 0.0.0.7
             access-list 1 permit 192.168.1.72 0.0.0.7
-            access-list 1 permit 192.168.1.80 0.0.0.7
-            access-list 1 permit 192.168.1.88 0.0.0.7
+            access-list 1 permit 192.168.1.80 0.0.0.15
             access-list 1 permit 192.168.1.96 0.0.0.7
+            access-list 1 permit 192.168.1.104 0.0.0.3
+
 
         #DHCP
             ip dhcp excluded-address 192.168.1.60
@@ -266,13 +274,13 @@
                 dns-server 8.8.8.8
                 exit
             ip dhcp pool Recepcio
-                net 192.168.1.80 255.255.255.252
-                default-router 192.168.1.81
+                net 192.168.1.104 255.255.255.252
+                default-router 192.168.1.105
                 dns-server 8.8.8.8
                 exit
-            ip dhcp pool APs
-                net 192.168.1.84 255.255.255.248
-                default-router 192.168.1.85
+            ip dhcp pool Management
+                net 192.168.1.80 255.255.255.240
+                default-router 192.168.1.81
                 dns-server 8.8.8.8
                 exit
 
@@ -1058,12 +1066,12 @@
         #Portok
             int g0/1
                 switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+                switchport trunk native vlan 4
             int g0/2
                 switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+                switchport trunk native vlan 4
             int fa0/1
                 switchport mode access
                 switchport access vlan 6
@@ -1088,6 +1096,8 @@
                 name Rendszergazda
             vlan 3
                 name Szerverszoba
+            vlan 4
+                name Management
             vlan 5
                 name Recepcio
             vlan 6
@@ -1098,19 +1108,19 @@
                 channel-group 2 mode active
             int po2
                 switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+                switchport trunk native vlan 4
             int range fa0/19-21
                 channel-group 1 mode active
             int po1
                 switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+                switchport trunk native vlan 4
                 exit
 
         #STP
             spanning-tree mode rapid-pvst
-            spanning-tree vlan 10,20,30,40,3,5,6 root primary
+            spanning-tree vlan 10,20,30,40,3,4,5,6 root primary
             spanning-tree portfast default
             spanning-tree portfast bpduguard default
             int fa0/1
@@ -1124,7 +1134,7 @@
 
         #DHCP-snooping
             ip dhcp snooping
-            ip dhcp snooping vlan 10,20,30,40,3,5,6
+            ip dhcp snooping vlan 10,20,30,40,3,4,5,6
             no ip dhcp snooping information option
             interface GigabitEthernet0/1
                 ip dhcp snooping trust
@@ -1140,7 +1150,7 @@
                 exit
 
         #ARP inspection
-            ip arp inspection vlan 10,20,30,40,3,5,6
+            ip arp inspection vlan 10,20,30,40,3,4,5,6
             ip arp inspection validate src-mac dst-mac ip
             interface GigabitEthernet0/1
                 ip arp inspection trust
@@ -1207,13 +1217,13 @@
         #Portok
             int g0/1
                 switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+                switchport trunk native vlan 4
                 exit
             int g0/2
                 switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+                switchport trunk native vlan 4
                 exit
             int fa0/1
                 switchport mode access
@@ -1237,25 +1247,25 @@
                 channel-group 3 mode active
             int po3
                 switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+                switchport trunk native vlan 4
             int range fa0/19-21
                 channel-group 1 mode active
             int po1
                 switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,2,3,5,6
-                switchport trunk native vlan 40
+                switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+                switchport trunk native vlan 4
                 exit
 
         #STP
             spanning-tree mode rapid-pvst
-            spanning-tree vlan 10,20,30,40,3,5,6
+            spanning-tree vlan 10,20,30,40,3,4,5,6
             spanning-tree portfast default
             spanning-tree portfast bpduguard default
 
         #DHCP-snooping
             ip dhcp snooping
-            ip dhcp snooping vlan 10,20,30,40,3,5,6
+            ip dhcp snooping vlan 10,20,30,40,3,4,5,6
             no ip dhcp snooping information option
             interface GigabitEthernet0/1
                 ip dhcp snooping limit rate 50
@@ -1271,7 +1281,7 @@
                 exit
 
         #ARP inspection
-            ip arp inspection vlan 10,20,30,40,3,5,6
+            ip arp inspection vlan 10,20,30,40,3,4,5,6
             ip arp inspection validate src-mac dst-mac ip
 
         #Portsecurity
@@ -1341,12 +1351,12 @@
         #Portok
             int g0/1
                 switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+                switchport trunk native vlan 4
             int g0/2
                 switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+                switchport trunk native vlan 4
             int fa0/2
                 switchport mode access
                 switchport access vlan 6
@@ -1355,7 +1365,7 @@
                 switchport access vlan 3
             int fa0/1
                 switchport mode access
-                switchport access vlan 40
+                switchport access vlan 4
                 exit
             int range fa0/5-18
                 switchport mode access
@@ -1371,25 +1381,25 @@
                 channel-group 3 mode active
             int po3
                 switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+                switchport trunk native vlan 4
             int range fa0/19-21
                 channel-group 2 mode active
             int po2
                 switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport trunk allowed vlan 10,20,30,40,3,4,5,6
+                switchport trunk native vlan 4
                 exit
 
         #STP
             spanning-tree mode rapid-pvst
-            spanning-tree vlan 10,20,30,40,3,5,6
+            spanning-tree vlan 10,20,30,40,3,4,5,6
             spanning-tree portfast default
             spanning-tree portfast bpduguard default
 
         #DHCP-snooping
             ip dhcp snooping
-            ip dhcp snooping vlan 10,20,30,40,3,5,6
+            ip dhcp snooping vlan 10,20,30,40,3,4,5,6
             no ip dhcp snooping information option
             int g0/1
                 ip dhcp snooping limit rate 20
@@ -1405,7 +1415,7 @@
                 exit
 
         #ARP inspection
-            ip arp inspection vlan 10,20,30,40,3,5,6
+            ip arp inspection vlan 10,20,30,40,3,4,5,6
             ip arp inspection validate src-mac dst-mac ip
 
         #Portsecurity
