Netflow működik konfig

--- a/Konfigok.config
+++ b/Konfigok.config
@@ -341,6 +341,10 @@
                 ip flow ingress
                 ip flow egress
                 exit
+            int g0/0.4
+                ip flow ingress
+                ip flow egress
+                exit
             int g0/0.5
                 ip flow ingress
                 ip flow egress
@@ -349,6 +353,7 @@
                 ip flow ingress
                 ip flow egress
                 exit
+            ip flow-export destination 192.168.1.74 9996
             ip flow-export version 9
             snmp-server community cisco rw
             logging 192.168.1.74
@@ -516,6 +521,7 @@
                 ip flow ingress
                 ip flow egress
             exit
+            ip flow-export destination 192.168.2.29 9996
             ip flow-export version 9
             snmp-server community cisco rw
             logging 192.168.2.29
@@ -971,6 +977,7 @@
             ip flow ingress
             ip flow egress
             exit
+            ip flow-export destination 192.168.3.34 9996
             ip flow-export version 9
 
         #TUNNEL 2
