--- a/Konfigok.config
+++ b/Konfigok.config
@@ -1654,3 +1654,8 @@
 #WLC
     admin
     jelszo: Aa123456!
+    interfacek, wlanok, ap groupok
+        Programozok
+        Designer
+        Hangtechnika
+        management
