Access-list added

--- a/Konfigok.config
+++ b/Konfigok.config
@@ -247,6 +247,16 @@
             access-list 1 permit 192.168.1.96 0.0.0.7
             access-list 1 permit 192.168.1.104 0.0.0.3
 
+        #ACCESS-LIST
+            access-list 101 permit ip 40.0.0.0 0.0.0.15 any
+            int se0/3/0
+                ip access-group 101 out
+                exit
+            access-list 102 deny icmp any any echo
+            access-list 102 permit ip any any
+            int se0/3/0
+                ip access-group 102 in
+                exit
 
         #DHCP
             ip dhcp excluded-address 192.168.1.60
@@ -489,6 +499,19 @@
             access-list 2 permit 192.168.2.0 0.0.0.15
             access-list 2 permit 192.168.2.16 0.0.0.7
             access-list 2 permit 192.168.2.24 0.0.0.7
+
+        #ACCESS-LIST
+            access-list 101 permit ip 20.0.0.0 0.0.0.15 any
+            int se0/3/0
+                ip access-group 101 out
+                exit
+
+            access-list 102 deny icmp any any echo
+            access-list 102 permit ip any any
+            int se0/3/0
+                ip access-group 102 in
+                exit
+            
 
         #IPV6
             int Se0/3/0
@@ -957,6 +980,19 @@
             ip nat inside source list 1 pool SITE3NAT overload
             access-list 1 permit 192.168.3.0 0.0.0.31
             access-list 1 permit 192.168.3.32 0.0.0.7
+
+        #ACCESS-LIST
+            access-list 101 permit ip 30.0.0.0 0.0.0.15 any
+            int se0/3/0
+                ip access-group 101 out
+                exit
+            access-list 102 deny icmp any any echo
+            access-list 102 permit ip any any
+            int se0/3/0
+                ip access-group 102 in
+                exit
+
+
 
         #IPV6
             int g0/0
