Address spoofing ACL

--- a/Konfigok.config
+++ b/Konfigok.config
@@ -257,6 +257,31 @@
             int se0/3/0
                 ip access-group 102 in
                 exit
+            access-list 10 permit 192.168.1.0 0.0.0.31
+                access-list 20 permit 192.168.1.32 0.0.0.15
+                access-list 30 permit 192.168.1.64 0.0.0.7
+                access-list 40 permit 192.168.1.48 0.0.0.15
+                access-list 5 permit 192.168.1.104 0.0.0.3
+                access-list 6 permit 192.168.1.72 0.0.0.7
+                access-list 7 permit 192.168.1.90 0.0.0.15
+                access-list 8 permit 192.168.1.96 0.0.0.7
+                int g0/0.10
+                    ip access-group 10 in
+                int g0/0.20
+                    ip access-group 20 in
+                int g0/0.30
+                    ip access-group 30 in
+                int g0/0.40
+                    ip access-group 40 in
+                int g0/0.5
+                    ip access-group 5 in
+                int g0/0.3
+                    ip access-group 6 in
+                int g0/0.4
+                    ip access-group 7 in
+                int g0/0.6
+                    ip access-group 8 in
+                exit
 
         #DHCP
             ip dhcp excluded-address 192.168.1.60
@@ -680,6 +705,26 @@
             ip route 0.0.0.0 0.0.0.0 192.168.2.241
             ip route 0.0.0.0 0.0.0.0 192.168.2.250 2
 
+        #ACCESS-LIST
+            access-list 50 permit 192.168.2.0 0.0.0.15
+            access-list 60 permit 192.168.2.24 0.0.0.7
+            access-list 11 permit 192.168.2.240 0.0.0.3
+            access-list 12 permit 192.168.2.244 0.0.0.3
+            access-list 13 permit 192.168.2.248 0.0.0.3
+            access-list 20 permit 192.168.1.32 0.0.0.15
+                int g0/1.50
+            ip access-group 50 in
+                int g0/1.60
+            ip access-group 60 in
+                int g0/0
+            ip access-group 20 in
+                int se0/3/1
+            ip access-group 11 out
+                int se0/3/1
+            ip access-group 12 out
+                int se0/3/1
+            ip access-group 13 out
+
         #DHCP
             int range g0/0,g0/1.50
                 ip helper-address 192.168.2.241
@@ -831,6 +876,26 @@
             ip route 0.0.0.0 0.0.0.0 192.168.2.245
             ip route 0.0.0.0 0.0.0.0 192.168.2.249 2
 
+        #ACCESS-LIST
+            access-list 50 permit 192.168.2.0 0.0.0.15
+            access-list 60 permit 192.168.2.24 0.0.0.7
+            access-list 11 permit 192.168.2.240 0.0.0.3
+            access-list 12 permit 192.168.2.244 0.0.0.3
+            access-list 13 permit 192.168.2.248 0.0.0.3
+            access-list 10 permit 192.168.2.16 0.0.0.7
+            int g0/2.50
+                ip access-group 50 in
+            int g0/2.60
+                ip access-group 60 in
+            int g0/0
+                ip access-group 10 in
+            int se0/3/0
+                ip access-group 11 out
+            int se0/3/0
+                ip access-group 12 out
+            int se0/3/0
+                ip access-group 13 out
+
         #DHCP
             int range g0/0,g0/2.50
                 ip helper-address 192.168.2.245
@@ -951,6 +1016,18 @@
                 ip nat inside
                 no sh
                 exit
+
+        ##ACCESS-LIST
+            access-list 10 permit 192.168.3.0 0.0.0.31
+            access-list 70 permit 192.168.3.32 0.0.0.7
+            access-list 6 permit 192.168.3.40 0.0.0.3
+            access-list 6 permit 192.168.3.40 0.0.0.3
+            int g0/0
+                ip access-group 10 in
+            int g0/1.70
+                ip access-group 70 in
+            int g0/1.6
+                ip access-group 6 in
 
         #DHCP
             ip dhcp excluded-address 192.168.3.38
