Added APs, nem mukodik: dhcp, pingek siteok kozott

--- a/Konfigok.config
+++ b/Konfigok.config
@@ -190,7 +190,7 @@
                 ip add 192.168.1.65 255.255.255.248
                 ip nat inside
             int g0/0.40
-                encapsulation dot1q 40
+                encapsulation dot1q 40 native
                 ip add 192.168.1.49 255.255.255.240
                 ip nat inside
             int g0/0.3
@@ -250,7 +250,7 @@
             int se0/3/0
                 ip access-group 102 in
                 exit
-            access-list 10 permit 192.168.1.0 0.0.0.31
+                access-list 10 permit 192.168.1.0 0.0.0.31
                 access-list 20 permit 192.168.1.32 0.0.0.15
                 access-list 30 permit 192.168.1.64 0.0.0.7
                 access-list 40 permit 192.168.1.48 0.0.0.15
@@ -1174,9 +1174,8 @@
                 switchport trunk allowed vlan 10,20,30,40,3,5,6
                 switchport trunk native vlan 40
             int g0/2
-                switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport mode access
+                switchport access vlan 30
             int fa0/1
                 switchport mode access
                 switchport access vlan 6
@@ -1320,14 +1319,12 @@
 
         #Portok
             int g0/1
-                switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport mode access
+                switchport access vlan 10
                 exit
             int g0/2
-                switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport mode access
+                switchport access vlan 20
                 exit
             int fa0/1
                 switchport mode access
@@ -1337,6 +1334,10 @@
                 switchport mode access
                 switchport access vlan 5
                 exit
+            int range fa0/19-24
+                switchport mode trunk
+                switchport trunk allowed vlan 10,20,30,40,3,5,6
+                switchport trunk native vlan 40
             int range fa0/3-18
                 switchport mode access
                 switchport access vlan 100
@@ -1454,20 +1455,19 @@
 
         #Portok
             int g0/1
-                switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport mode access
+                switchport access vlan 40
             int g0/2
-                switchport mode trunk
-                switchport trunk allowed vlan 10,20,30,40,3,5,6
-                switchport trunk native vlan 40
+                switchport mode access
+                switchport access vlan 3
             int fa0/2
                 switchport mode access
                 switchport access vlan 6
-            int range fa0/3-4
-                switchport mode access
-                switchport access vlan 3
-            int range fa0/5-18
+            int range fa0/19-24
+                switchport mode trunk
+                switchport trunk allowed vlan 10,20,30,40,3,5,6
+                switchport trunk native vlan 40
+            int range fa0/3-18
                 switchport mode access
                 switchport access vlan 100
                 switchport nonegotiate
