--- a/Konfigok.config
+++ b/Konfigok.config
@@ -250,28 +250,32 @@
             int se0/3/0
                 ip access-group 102 in
                 exit
-                access-list 10 permit 192.168.1.0 0.0.0.31
-                access-list 20 permit 192.168.1.32 0.0.0.15
-                access-list 30 permit 192.168.1.64 0.0.0.7
-                access-list 40 permit 192.168.1.48 0.0.0.15
-                access-list 5 permit 192.168.1.104 0.0.0.3
-                access-list 6 permit 192.168.1.72 0.0.0.7
-                access-list 7 permit 192.168.1.90 0.0.0.15
-                access-list 8 permit 192.168.1.96 0.0.0.7
+                access-list 110 permit ip 192.168.1.0 0.0.0.31 any
+                access-list 110 permit udp host 0.0.0.0 eq 68 host 255.255.255.255 eq 67
+                access-list 120 permit ip 192.168.1.32 0.0.0.15 any
+                access-list 120 permit udp host 0.0.0.0 eq 68 host 255.255.255.255 eq 67
+                access-list 130 permit ip 192.168.1.64 0.0.0.7 any
+                access-list 130 permit udp host 0.0.0.0 eq 68 host 255.255.255.255 eq 67
+                access-list 140 permit ip 192.168.1.48 0.0.0.15 any
+                access-list 140 permit udp host 0.0.0.0 eq 68 host 255.255.255.255 eq 67
+                access-list 105 permit ip 192.168.1.104 0.0.0.3 any
+                access-list 105 permit udp host 0.0.0.0 eq 68 host 255.255.255.255 eq 67
+                access-list 106 permit ip 192.168.1.72 0.0.0.7 any
+                access-list 107 permit ip 192.168.1.96 0.0.0.7 any
                 int g0/0.10
-                    ip access-group 10 in
+                    ip access-group 110 in
                 int g0/0.20
-                    ip access-group 20 in
+                    ip access-group 120 in
                 int g0/0.30
-                    ip access-group 30 in
+                    ip access-group 130 in
                 int g0/0.40
-                    ip access-group 40 in
+                    ip access-group 140 in
                 int g0/0.5
-                    ip access-group 5 in
+                    ip access-group 105 in
                 int g0/0.3
-                    ip access-group 6 in
+                    ip access-group 106 in
                 int g0/0.6
-                    ip access-group 8 in
+                    ip access-group 107 in
                 exit
 
         #DHCP
@@ -483,6 +487,7 @@
             ip route 0.0.0.0 0.0.0.0 20.0.0.1
 
         #DHCP
+            ip dhcp excluded-address 192.168.2.2 192.168.2.3
             ip dhcp excluded-address 192.168.2.14
             ip dhcp pool Szerver_felho
                 net 192.168.2.0 255.255.255.240
@@ -512,13 +517,11 @@
             int se0/3/0
                 ip access-group 101 out
                 exit
-
             access-list 102 deny icmp any any echo
             access-list 102 permit ip any any
             int se0/3/0
                 ip access-group 102 in
                 exit
-            
 
         #IPV6
             int Se0/3/0
@@ -688,24 +691,17 @@
             ip route 0.0.0.0 0.0.0.0 192.168.2.250 2
 
         #ACCESS-LIST
-            access-list 50 permit 192.168.2.0 0.0.0.15
+            access-list 150 permit ip 192.168.2.0 0.0.0.15 any
+            access-list 150 permit udp host 0.0.0.0 eq 68 host 255.255.255.255 eq 67
             access-list 60 permit 192.168.2.24 0.0.0.7
-            access-list 11 permit 192.168.2.240 0.0.0.3
-            access-list 12 permit 192.168.2.244 0.0.0.3
-            access-list 13 permit 192.168.2.248 0.0.0.3
-            access-list 20 permit 192.168.1.32 0.0.0.15
+            access-list 120 permit ip 192.168.1.32 0.0.0.15 any
+            access-list 120 permit udp host 0.0.0.0 eq 68 host 255.255.255.255 eq 67
                 int g0/1.50
-            ip access-group 50 in
+            ip access-group 150 in
                 int g0/1.60
             ip access-group 60 in
                 int g0/0
-            ip access-group 20 in
-                int se0/3/1
-            ip access-group 11 out
-                int se0/3/1
-            ip access-group 12 out
-                int se0/3/1
-            ip access-group 13 out
+            ip access-group 120 in
 
         #DHCP
             int range g0/0,g0/1.50
@@ -859,24 +855,17 @@
             ip route 0.0.0.0 0.0.0.0 192.168.2.249 2
 
         #ACCESS-LIST
-            access-list 50 permit 192.168.2.0 0.0.0.15
+            access-list 150 permit ip 192.168.2.0 0.0.0.15 any
+            access-list 150 permit udp host 0.0.0.0 eq 68 host 255.255.255.255 eq 67
             access-list 60 permit 192.168.2.24 0.0.0.7
-            access-list 11 permit 192.168.2.240 0.0.0.3
-            access-list 12 permit 192.168.2.244 0.0.0.3
-            access-list 13 permit 192.168.2.248 0.0.0.3
-            access-list 10 permit 192.168.2.16 0.0.0.7
+            access-list 110 permit ip 192.168.2.16 0.0.0.7 any
+            access-list 110 permit udp host 0.0.0.0 eq 68 host 255.255.255.255 eq 67
             int g0/2.50
-                ip access-group 50 in
+                ip access-group 150 in
             int g0/2.60
                 ip access-group 60 in
             int g0/0
-                ip access-group 10 in
-            int se0/3/0
-                ip access-group 11 out
-            int se0/3/0
-                ip access-group 12 out
-            int se0/3/0
-                ip access-group 13 out
+                ip access-group 110 in
 
         #DHCP
             int range g0/0,g0/2.50
@@ -999,17 +988,27 @@
                 no sh
                 exit
 
-        ##ACCESS-LIST
-            access-list 10 permit 192.168.3.0 0.0.0.31
-            access-list 70 permit 192.168.3.32 0.0.0.7
-            access-list 6 permit 192.168.3.40 0.0.0.3
-            access-list 6 permit 192.168.3.40 0.0.0.3
+        #ACCESS-LIST
+            access-list 110 permit ip 192.168.3.0 0.0.0.31 any
+            access-list 110 permit udp host 0.0.0.0 eq 68 host 255.255.255.255 eq 67
+            access-list 170 permit ip 192.168.3.32 0.0.0.7 any
+            access-list 170 permit udp host 0.0.0.0 eq 68 host 255.255.255.255 eq 67
+            access-list 106 permit ip 192.168.3.40 0.0.0.3 any
             int g0/0
-                ip access-group 10 in
+                ip access-group 110 in
             int g0/1.70
-                ip access-group 70 in
+                ip access-group 170 in
             int g0/1.6
-                ip access-group 6 in
+                ip access-group 106 in
+            access-list 101 permit ip 30.0.0.0 0.0.0.15 any
+            int se0/3/0
+                ip access-group 101 out
+                exit
+            access-list 102 deny icmp any any echo
+            access-list 102 permit ip any any
+            int se0/3/0
+                ip access-group 102 in
+                exit
 
         #DHCP
             ip dhcp excluded-address 192.168.3.38
@@ -1023,7 +1022,6 @@
                 default-router 192.168.3.33
                 dns-server 8.8.8.8
                 exit
-                
 
         #FORGALOMIRÁNYÍTÁS
             router ospf 1
@@ -1039,19 +1037,6 @@
             ip nat inside source list 1 pool SITE3NAT overload
             access-list 1 permit 192.168.3.0 0.0.0.31
             access-list 1 permit 192.168.3.32 0.0.0.7
-
-        #ACCESS-LIST
-            access-list 101 permit ip 30.0.0.0 0.0.0.15 any
-            int se0/3/0
-                ip access-group 101 out
-                exit
-            access-list 102 deny icmp any any echo
-            access-list 102 permit ip any any
-            int se0/3/0
-                ip access-group 102 in
-                exit
-
-
 
         #IPV6
             int g0/0
