gatya dhcp site1

--- a/Konfigok.config
+++ b/Konfigok.config
@@ -1231,10 +1231,10 @@
                 ip dhcp snooping trust
                 exit
             interface GigabitEthernet0/2
-                ip dhcp snooping limit rate 12
+                ip dhcp snooping limit rate 6
                 exit
             interface FastEthernet0/1
-                ip dhcp snooping limit rate 3
+                ip dhcp snooping limit rate 1
                 exit
 
         #ARP inspection
@@ -1358,10 +1358,10 @@
             ip dhcp snooping vlan 10,20,30,40,3,5,6
             no ip dhcp snooping information option
             interface GigabitEthernet0/1
-                ip dhcp snooping limit rate 50
+                ip dhcp snooping limit rate 25
                 exit
             interface GigabitEthernet0/2
-                ip dhcp snooping limit rate 24
+                ip dhcp snooping limit rate 14
                 exit
             interface range FastEthernet0/1-2
                 ip dhcp snooping limit rate 1
@@ -1487,7 +1487,7 @@
             ip dhcp snooping vlan 10,20,30,40,3,5,6
             no ip dhcp snooping information option
             int g0/1
-                ip dhcp snooping limit rate 20
+                ip dhcp snooping limit rate 10
                 exit
             int g0/2
                 ip dhcp snooping trust
@@ -1516,7 +1516,7 @@
                 switchport port-security violation restrict
                 switchport port-security mac-address sticky
                 exit
-            int range fa0/1-4
+            int fa0/2
                 switchport port-security
                 switchport port-security maximum 1
                 switchport port-security violation restrict
