--- a/Konfigok.config
+++ b/Konfigok.config
@@ -506,11 +506,12 @@
                 exit
 
         #NAT
-            ip nat pool SITE2NAT 20.0.0.3 20.0.0.14 netmask 255.255.255.240
+            ip nat pool SITE2NAT 20.0.0.4 20.0.0.14 netmask 255.255.255.240
             ip nat inside source list 2 pool SITE2NAT overload
             access-list 2 permit 192.168.2.0 0.0.0.15
             access-list 2 permit 192.168.2.16 0.0.0.7
             access-list 2 permit 192.168.2.24 0.0.0.7
+            ip nat inside source static 192.168.2.29 20.0.0.3
 
         #ACCESS-LIST
             access-list 101 permit ip 20.0.0.0 0.0.0.15 any
@@ -1519,27 +1520,27 @@
                 exit
 
         #Portok
-        int range g0/1-2
-            switchport mode trunk
-            switchport trunk allowed vlan 50,60,99
-            switchport trunk native vlan 99
-            exit
-        int range fa0/1-14
-            switchport mode access
-            switchport access vlan 50
-            exit
-        int range fa0/15-16
-            switchport mode access
-            switchport access vlan 60
-            exit
-        int range fa0/17-24
+            int range g0/1-2
+                switchport mode trunk
+                switchport trunk allowed vlan 50,60,99
+                switchport trunk native vlan 99
+                exit
+            int range fa0/1-14
                 switchport mode access
-                switchport access vlan 100
-                switchport nonegotiate
-                shutdown
-                no cdp enable
-                no lldp transmit
-                no lldp receive
+                switchport access vlan 50
+                exit
+            int range fa0/15-16
+                switchport mode access
+                switchport access vlan 60
+                exit
+            int range fa0/17-24
+                    switchport mode access
+                    switchport access vlan 100
+                    switchport nonegotiate
+                    shutdown
+                    no cdp enable
+                    no lldp transmit
+                    no lldp receive
 
         #STP
             spanning-tree portfast default
