Looks like it works(DHCP)

--- a/Konfigok.config
+++ b/Konfigok.config
@@ -487,8 +487,10 @@
             ip route 0.0.0.0 0.0.0.0 20.0.0.1
 
         #DHCP
-            ip dhcp excluded-address 192.168.2.2 192.168.2.3
+            ip dhcp excluded-address 192.168.2.1 192.168.2.3
             ip dhcp excluded-address 192.168.2.14
+            ip dhcp excluded-address 192.168.2.17
+            ip dhcp excluded-address 192.168.2.33
             ip dhcp pool Szerver_felho
                 net 192.168.2.0 255.255.255.240
                 default-router 192.168.2.1
